client vm crashes making browser fails to respond under some scenarios

XMLWordPrintable

    • b142
    • generic, x86
    • windows, windows_xp, windows_vista
    • Verified

        IE browser either fails to respond or crashes when tried to close the browser while running some of the Applet lifecycle scenarios.

        Issues seen with 6UR also but it's more easy to reproduce with JDK7. Issue is mainly seen with IE browsers

        Steps to reproduce:
        1) Try to load any of the following applet inside the browser
        http://sqeweb.sfbay.sun.com/deployment2/jitu/plug-bug/ALC/PrintThreadisActive.html
        http://sqeweb.sfbay.sun.com/deployment2/jitu/plug-bug/security/authenticator/SimpleAuthTest.html
        http://sqeweb.sfbay.sun.com/deployment2/jitu/plug-bug/security/eventqueue/ToolKitEventQueueACTest1.html
        http://sqeweb.sfbay.sun.com/deployment2/jitu/plug-bug/security/eventqueue/ToolKitEventQueueACTest2.html
        http://sqeweb.sfbay.sun.com/deployment2/jitu/latest_ws_test/6/deployment/src/plugin/LiveConnect/LiveConnect/html/auto/JSScopeMainFrame.html
        Accept the security pop-up in case of #2 applet
        2) Make sure that applet is getting loaded/reloaded fine (wait for couple of seconds)
        3) try to close the browser, if browser fails to respond/crashes then bug is reproduced

        Crash logs can be accessed from following location:
        http://sqeweb.sfbay.sun.com/deployment2/jitu/jdk7-crash/

              Assignee:
              Denis Fokin (Inactive)
              Reporter:
              Jitender Singh (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: