6998716: client vm crashes making browser fails to respond under some scenarios

Reviewed-by: art, denis, uta